--- a/main.html
+++ b/main.html
@@ -11,6 +11,40 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	 <form method="POST" action="#">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required><br>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required><br>
+
+    <label for="gender">Gender</label><br>
+    <input type="radio" id="gender_male" name="gender" value="male" required>
+    <label for="gender_male">Male</label><br>
+    <input type="radio" id="gender_female" name="gender" value="female" required>
+    <label for="gender_female">Female</label><br>
+    <input type="radio" id="gender_other" name="gender" value="other" required>
+    <label for="gender_other">Other</label><br>
+
+    <label for="cars">Car Brands</label>
+    <select id="cars" name="cars" required>
+      <option value="BMW">BMW</option>
+      <option value="Audi">Audi</option>
+      <option value="Mercedes">Mercedes</option>
+    </select><br>
+
+    <label for="carage">Car Age</label>
+    <input type="number" id="carage" name="carage" required><br>
+
+    <label for="dop">Date of Purchase (DOP)</label>
+    <input type="date" id="dop" name="dop" required><br>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required><br>
+
+    <button type="submit">Submit</button>
+  </form>
+
 </body>
 
 </html>
